--- a/index.html
+++ b/index.html
@@ -56,30 +56,22 @@
                   alt="" class="col-12">
               </div>
               <div class="col-8">
-                <p>
-                  Full Stack Web Developer with extensive manufacturing experience. Student of the University of New Hampshire Trilogy Coding Boot Camp with skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, AJax, JSON, Node.js, Express.js, Mysql, Mongo DB and React.js. Degree in Environmental Science from Manchester Community College. My goal as a developer is to create intuitive user experiences while developing responsive visually stunning websites.
-
-My background in manufacturing has given me invaluable experience working in a deadline-oriented team environment and putting the needs of the customer first.
-                </p>
                 <br>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, dolores itaque mollitia cupiditate
-                  similique omnis nulla totam inventore odit modi, sunt accusamus, dolore repellat earum. Iusto,
-                  laudantium. In, iste distinctio! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor,
-                  dolores itaque mollitia cupiditate
-                  similique omnis nulla totam inventore odit modi, sunt accusamus, dolore repellat earum. Iusto,
-                  laudantium. In, iste distinctio!
+                  Full Stack Web Developer with extensive manufacturing experience. Student of the University of New Hampshire Trilogy Coding Boot Camp with skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, Ajax, JSON, Node.js, Express.js, MySQL, Mongo DB and React.js.
+                </p>
+                <p>
+                  My goal as a developer is to create intuitive user experiences while developing responsive visually stunning websites.  My background in manufacturing has given me invaluable experience working in a deadline-oriented team environment and putting the needs of the customer first.
+                </p>
+                <p>
+                  Certificate in Modern Office Practices from Wilcox Regional Vo-Tech School.  Associates Degree in Environmental Science from Manchester Community College.  Certificate in Machine Tool Technology from River Valley Community College.  Certificate in Full-Stack Web Development from UNH Coding Bootcamp, <strong>presently enrolled</strong>.
                 </p>
               </div>
             </div>
             <br>
             <div class="text-section row">
-              <div class="col-12">
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil dolorum veniam architecto quo
-                  veritatis id modi incidunt velit quia excepturi eveniet tenetur laudantium nobis ratione deserunt,
-                  nulla corrupti? Placeat, porro.
-                </p>
+              <div class="col-8">
+                
               </div>
             </div>
           </div>
