--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
                 <div class="col-sm-6 col-md-12 col-lg-6">
                   <img
                     class="img-fluid port-image"
-                    src="assets/Images/Booze_&_Brews_ May 25, 2020 1_39 PM.mp4"
+                    src="assets/Images/Booze_&Brews_ May 25, 2020 1_56 PM.gif"
                     alt="Booze and Brews app deployed"
                   />
                 </div>
