--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <h1>Lynn Boudreau</h1>
       <a class="navbar-brand" href="index.html" id="logo"></a>
       <a href="https://dev.to/lynnboudreau">
-        <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Lynn  Boudreau's DEV Profile" height="30" width="30">
+        <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Lynn  Boudreau's DEV Profile" height="30"
+          width="30">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
         aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="toggle navigation">
@@ -51,27 +52,32 @@
             <hr>
             <div class="image-section row">
               <div class="col-4">
-                <img
-                  src="assets/Images/Amber's Wedding 10-14-11.jpg"
-                  alt="Photo of Lynn Boudreau" class="col-12">
+                <img src="/assets/Images/IMG_20200710_160436_905" alt="Photo of Lynn Boudreau" class="col-12">
               </div>
               <div class="col-8">
                 <br>
                 <p>
-                  Full Stack Web Developer with extensive Manufacturing and Electro-Mechanical experience. Student of the University of New Hampshire Trilogy Coding Boot Camp with skills in HTML5, CSS3, Javascript, JQuery, Bootstrap, Ajax, JSON, Node.js, Express.js, MySQL, Mongo DB and React.js.
+                  Full Stack Web Developer with extensive Manufacturing and Electro-Mechanical experience. Student of
+                  the University of New Hampshire Trilogy Coding Boot Camp with skills in HTML5, CSS3, Javascript,
+                  JQuery, Bootstrap, Ajax, JSON, Node.js, Express.js, MySQL, Mongo DB and React.js.
                 </p>
                 <p>
-                  My goal as a developer is to create intuitive user experiences while developing responsive visually stunning websites.  My background in manufacturing has given me invaluable experience working in a deadline-oriented team environment and putting the needs of the customer first.
+                  My goal as a developer is to create intuitive user experiences while developing responsive visually
+                  stunning websites. My background in manufacturing has given me invaluable experience working in a
+                  deadline-oriented team environment and putting the needs of the customer first.
                 </p>
                 <p>
-                  Certificate in Full-Stack Web Development from UNH Coding Bootcamp, <strong>presently enrolled</strong>.  Certificate in Machine Tool Technology from River Valley Community College.  A.S. Degree, Environmental Sciences, Middlesex Community College.  Certificate in Modern Office Practices from Wilcox Regional Vo-Tech School.    
+                  Certificate in Full-Stack Web Development from UNH Coding Bootcamp, <strong>presently
+                    enrolled</strong>. Certificate in Machine Tool Technology from River Valley Community College. A.S.
+                  Degree, Environmental Sciences, Middlesex Community College. Certificate in Modern Office Practices
+                  from Wilcox Regional Vo-Tech School.
                 </p>
               </div>
             </div>
             <br>
             <div class="text-section row">
               <div class="col-8">
-                
+
               </div>
             </div>
           </div>
@@ -99,7 +105,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
-    
+
 
 </body>
 
