--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
             <hr>
             <div class="image-section row">
               <div class="col-4">
-                <img src="/assets/Images/IMG_20200710_160436_905.400x400.png" alt="Photo of Lynn Boudreau"
-                  class="col-12">
+                <img src="C:\users\lbou\bootcamp\Portfolio\assets\ImagesIMG_20200710_160436_905.400x400.png"
+                  alt="Photo of Lynn Boudreau" class="col-12">
               </div>
               <div class="col-8">
                 <br>
                 <p>
                   Full Stack Web Developer with extensive Manufacturing and Electro-Mechanical experience. Student of
                   the University of New Hampshire Trilogy Coding Boot Camp with skills in HTML5, CSS3, Javascript,
-                  JQuery, Bootstrap, Ajax, JSON, Node.js, Express.js, MySQL, Mongo DB and React.js.
+                  JQuery, Bootstrap, Ajax, JSON, Node.js, Express.js, MySQL, Mongo DB, React.js, MERN
                 </p>
                 <p>
                   My goal as a developer is to create intuitive user experiences while developing responsive visually
