--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="card-body">
             <h5 class="card-title">About Me</h5>
             <hr>
-            <div class="image-section row">
+            <div class="image-section-row">
               <img class="col-4">
               <img src="assets\Images\IMG_20200710_160436_905.400x400.png" alt="Photo of Lynn Boudreau" class="col-12">
             </div>
