--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <hr>
             <div class="image-section row">
               <img class="col-4">
-              <img src="assets\Images\IMG_20200710_160436_905.400x400.png" alt="Photo of Lynn Boudreau">
+              <img src="assets\Images\IMG_20200710_160436_905.400x400.png" alt="Photo of Lynn Boudreau" />
             </div>
             <div class="col-8">
               <br>
